hoàn thiện apis
