# routes/userRoute.js
@@ -8,5 +8,6 @@ router.route('/:id').get(authentication, getUser);
 router.route('/filter/:userType').get(authentication, restrictTo('0'), getAllUserByUserType);
 router.patch('/change-password', authentication, changePassword);
 router.patch('/update-profile', authentication, updateUser);
+router.route('/getUser/:userType').get(getAllUserByUserType);
 
 module.exports = router;
